[project]
name = "ling-gan-gu"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["numpy (>=2.3.0,<3.0.0)", "matplotlib (>=3.10.3,<4.0.0)", "autopep8 (>=2.3.2,<3.0.0)", "ipykernel (>=6.29.5,<7.0.0)", "lakeshore (>=1.8.1,<2.0.0)", "pylatexenc (>=2.10,<3.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
